syntax = "proto3";
package fifsky.blog.api.v1;

import "google/api/annotations.proto";
import "google/api/field_behavior.proto";
import "google/protobuf/empty.proto";
import "buf/validate/validate.proto";
import "api/v1/common.proto";

option go_package = "gen/api/v1";

service MoodService {
  rpc List(PageRequest) returns (MoodListResponse) {
    option (google.api.http) = {
      post: "/api/mood/list"
      body: "*"
    };
  }
}

message MoodItem {
  int32 id = 1;
  string content = 2;
  UserSummary user = 3;
  string created_at = 4;
}

message MoodListResponse {
  repeated MoodItem list = 1;
  int32 page_total = 2;
}
